--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <title>HTML - Hypertext Markup Language </title>
 </head>
 <body>
-
     <h1 id="inicio">Historia da Internet </h1>
     <hr>
+
+    <a href="cadastro.html">Entrar</a> <br>
+    <a href="login.html">Login</a>
 
     <ol>
       <li><a href="#comeco" >Comeco de tudo</a></li>
